# MPointer2.0

./: CMakeLists.txt  Readme  asd.txt
Respaldo/: main_client.cpp
include/: DumpManager.h  GarbageCollector.h  MPointer.h  MemoryManager.h  MemoryManagerClient.h  MemoryManagerServiceImpl.h
proto/: memory_manager.proto
src/: DumpManager.cpp  MemoryManager.cpp  MemoryManagerServiceImpl.cpp  main.cpp
src/client/: MemoryManagerClient.cpp  client_main.cpp
src/server/: DumpManager.cpp  GarbageCollector.cpp  MemoryManager.cpp
